@@ -5,6 +5,7 @@ Revision history for {{$dist->name}}
     [Bugs fixed]
     - small memory leak due to defer blocks not being cleared up, now uses try/finally
     to avoid this
+    - minor issues in command line parser for services' config
 
 0.004     2021-04-28 13:27:36+08:00 Asia/Kuala_Lumpur
     [API Changes]
